# semantic-search-service

./: Dockerfile  README.md  docker-compose.yml  model.py  pyproject.toml
app/: db.py  main.py
app/routers/: terms.py
